task(T17): improve admin analytics
